# cipher_longuetmarx_nicolas

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
cipher_nkd2120/: cipher_nkd2120.py  cipher_withdoc.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: cipher_nkd2120.rst  modules.rst
map/: Jett_FCC_contour_Scrape1956.py  Jett_FCC_contour_scrape1966.py  SCRAP.ipynb  calc_distance1.ipynb
map/.ipynb_checkpoints/: SCRAP-checkpoint.ipynb
src/mds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cipher_nkd2120.py  test_cipher_nkd2120_hw6.py  test_mds.py
