[tool.poetry]
name = "cipher_nkd2120"
version = "3.7"
description = "Package for mds2020"
authors = ["Nicolas Longuet Marx <nkd2120@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
