[tool.poetry]
name = "mds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
numpy = "^1.19.2"
pandas_profiling = "^2.9.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"
lxml = "^4.6.1"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
